# diffy

./: .pre-commit-config.yaml  pyproject.toml
diffy/: __init__.py  __main__.py
tests/: conftest.py  test_diffy.py
