[tool.poetry]
name = "diffy"
version = "0.0.1"
description = "Diffy squares"
authors = ["copyrite <tatu.heikki.leinonen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pre-commit = { version = "^2.10.0", python = "^3.6.1" }

[tool.isort]
force_single_line = true

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
